Fixed mobile layout overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  width: 100dvw;
+  width: 100%;
   overflow: hidden;
   height: 100vh;
   height: 100dvh;
@@ -41,9 +41,12 @@ body {
 }
 
 @layer base {
+
   main {
-    @apply w-dvw h-dvh overflow-hidden;
-  }
+  width: 100%;
+  height: 100dvh;
+  overflow: hidden;
+}
 
   nav {
     @apply flex justify-between items-center bg-white/50 backdrop-blur-3xl p-2 px-5 select-none;
@@ -416,7 +419,8 @@ body {
     left: 0 !important;
     right: 0 !important;
     bottom: 0 !important;
-    width: 100vw !important;
+    /* width: 100vw !important; */
+    width: 100% !important;
     height: 100vh !important;
     max-width: none !important;
     max-height: none !important;
@@ -970,3 +974,6 @@ input, textarea {
     }
   }
 }
+
+
+
